--- a/POMACSystem/Views/Shared/_Layout.cshtml
+++ b/POMACSystem/Views/Shared/_Layout.cshtml
@@ -239,17 +239,18 @@ desired effect
                     <li class="header">HEADER</li>
                     <!-- Optionally, you can add icons to the links -->
                     <li><a href="@Url.Action("Index", "PetitionerDetails")"><i class="fa fa-circle-o"></i>PETITIONER DETAILS</a></li>
+                    <li><a href="@Url.Action("Create", "PetitionDetails")"><i class="fa fa-circle-o"></i>PETITION DETAILS</a></li>
                     <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
                     <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
                     <li class="treeview">
                         <a href="#">
-                            <i class="fa fa-link"></i> <span>Multilevel</span>
+                            <i class="fa fa-link"></i> <span>ADMINISTRATION</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="#">Link in level 2</a></li>
+                            <li><a href="@Url.Action("Index", "Reliefs")"><i class="fa fa-circle-o"></i>RELIEFS</a></li>
                             <li><a href="#">Link in level 2</a></li>
                         </ul>
                     </li>
