--- a/POMACSystem/Views/PetitionerDetails/Delete.cshtml
+++ b/POMACSystem/Views/PetitionerDetails/Delete.cshtml
@@ -60,14 +60,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DateOfBirthKnown)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfBirthKnown)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.IdNumber)
         </dt>
 
@@ -180,6 +172,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.County1.CountyName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.County1.CountyName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DateKnown.DateKnown1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DateKnown.DateKnown1)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.EducationLevel.LevelOfEducation)
         </dt>
 
@@ -193,6 +201,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Gender1.GenderName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Location1.LocationName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Location1.LocationName)
         </dd>
 
         <dt>
@@ -220,30 +236,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Tribe.TribeName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tribe.TribeName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.County1.CountyName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.County1.CountyName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Location1.LocationName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Location1.LocationName)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.SubCounty1.SubCountyName)
         </dt>
 
@@ -257,6 +249,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Sublocation1.SubLocationName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Tribe.TribeName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tribe.TribeName)
         </dd>
 
     </dl>
