--- a/POMACSystem/Views/PetitionerDetails/Edit.cshtml
+++ b/POMACSystem/Views/PetitionerDetails/Edit.cshtml
@@ -90,12 +90,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DateOfBirthKnown, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DateOfBirthKnown, "DateOfBirthKnown", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.DateOfBirthKnown)
-                    @Html.ValidationMessageFor(model => model.DateOfBirthKnown, "", new { @class = "text-danger" })
-                </div>
+                @Html.DropDownList("DateOfBirthKnown", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DateOfBirthKnown, "", new { @class = "text-danger" })
             </div>
         </div>
 
